--- a/.gitignore
+++ b/.gitignore
@@ -65,6 +65,7 @@ node_modules
 bower_components
 .sass-cache
 test/bower_components
+app/assets/styles/vendor/_collecticons.scss
 
 
 ################################################
