--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
   },
   "dependencies": {
     "classnames": "^2.2.5",
+    "csvtojson": "^1.1.5",
     "lodash": "^4.17.4",
     "mapbox-gl": "^0.37.0",
     "prop-types": "^15.5.8",
@@ -89,6 +90,8 @@
     "react-router": "^3.0.5",
     "react-router-scroll": "^0.4.2",
     "redux": "^3.6.0",
-    "redux-logger": "^3.0.1"
+    "redux-logger": "^3.0.1",
+    "redux-thunk": "^2.2.0",
+    "request": "^2.81.0"
   }
 }
