--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
   "dependencies": {
     "classnames": "^2.2.5",
     "csvtojson": "^1.1.5",
+    "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.4",
     "mapbox-gl": "^0.37.0",
     "prop-types": "^15.5.8",
